# efi-os-loader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  configure.sh
ovmf/: ovmf-target.txt
payload/: main.c
scripts/: build.sh  copy_efi.sh  run.sh
src/: CourseWork.inf  MemoryMap.c  MemoryMap.h  ProcessorsInfo.c  ProcessorsInfo.h  app-target.txt  jumper.S  main.c
